// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render default 1`] = `
<div>
  <button
    class="a b c d e f g h"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button should render secondary 1`] = `
<div>
  <button
    class="a b c d e f i j"
    type="button"
  >
    Button
  </button>
</div>
`;
